syntax = "proto3";

package verifiable_credentials;

option go_package = "github.com/BojanG99/Decentralized-Identitise-And-Verifiable-Credentials/protobuff;verifiable_credentials";

service VerifiableCredential {
  rpc IssueCredential(stream ClientMessage) returns (stream ServerMessage);
}

message ServerMessage {
  string message = 1;
}

message ClientMessage {
  string message = 1;
}